// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`--dry-run > should list for dependent tasks > stdout 1`] = `
[log] <Bold><Cyan>🛠️ Welcome to Nadle {version}!</Cyan></BoldDim>
[log] <Dim>Loading configuration file from: /ROOT/test/__fixtures__/main/nadle.depends-on.ts</BoldDim>
[log] <Dim>Using 1 worker for task execution</BoldDim>
[log] <Bold>Execution plan:</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>node</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>install</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>test</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>compileSvg</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>compileTs</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>compile</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>build</BoldDim>
[log] 
<Bold><Green>RUN SUCCESSFUL</Green></BoldDim> in <Bold>{duration}</BoldDim>
[log] <Bold>0</BoldDim> task executed
`;

exports[`--dry-run > should list for one task > stdout 1`] = `
[log] <Bold><Cyan>🛠️ Welcome to Nadle {version}!</Cyan></BoldDim>
[log] <Dim>Loading configuration file from: /ROOT/test/__fixtures__/main/nadle.config.ts</BoldDim>
[log] <Dim>Using 1 worker for task execution</BoldDim>
[log] <Bold>Execution plan:</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>hello</BoldDim>
[log] 
<Bold><Green>RUN SUCCESSFUL</Green></BoldDim> in <Bold>{duration}</BoldDim>
[log] <Bold>0</BoldDim> task executed
`;
